Trying to fix backgrounds on iOS

--- a/src/app.css
+++ b/src/app.css
@@ -104,6 +104,19 @@ a {
 	background-position: center;
 	background-repeat: no-repeat;
 	z-index: -1; /* Send it behind the content */
+	& > img {
+		display: none;
+		object-fit: cover;
+		width: 100%;
+		height: 100%;
+		z-index: -1;
+	}
+}
+
+@supports not (background-size: cover) {
+	.background-image > img {
+		display: block;
+	}
 }
 
 @media (max-width: 480px) {
